Correction et Test de l'heuristique TreeOfChamber, implementation du ModeleJeuThread